--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "click-to-call",
   "version": "0.0.1",
   "description": "Click-To-Call",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikejakobsen/wp-popup"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
